--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,4 @@
+org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 kotlin.code.style=official
 kotlin.js.compiler=ir
+kotlin.native.ignoreDisabledTargets=true
