--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -18,21 +18,19 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
+title: Measurement Docs
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Documentation for physical-measurement-units, a kotlin multiplatform project.
 domain: john-tuesday.github.io
 baseurl: "/physical-measurement-units/docs" # the subpath of your site, e.g. /blog
 url: "https://john-tuesday.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-# twitter_username: jekyllrb
 github_username: John-Tuesday
 
 # Build settings
-theme: minima
+remote_theme: pages-themes/tactile@v0.2.0
 plugins:
+  - jekyll-remote-theme
   - jekyll-feed
 
 # Exclude from processing.
