Update kotlin version 1.9.10 -> 1.9.20
Requires explicitly specifying Dokka version as it does not have a 1.9.20 release

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,9 @@
 [versions]
+dokka = "1.9.10"
 junit = "5.10.0"
 junitPlatform = "1.10.0"
 junit4 = "4.13.2"
-kotlin = "1.9.10"
+kotlin = "1.9.20"
 foojay = "0.7.0"
 
 [libraries]
@@ -15,7 +16,7 @@ kotlin-gradlePlugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", ve
 kotlin-multiplatform-gradlePlugin = { module = "org.jetbrains.kotlin.multiplatform:org.jetbrains.kotlin.multiplatform.gradle.plugin", version.ref = "kotlin" }
 
 [plugins]
-dokka = { id = "org.jetbrains.dokka", version.ref = "kotlin" }
+dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 foojay-resolver = { id = "https://github.com/John-Tuesday/physical-measurement-units.git", version.ref = "foojay" }
 
