Add in-house Maven Publish Assist plugin

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ junit = "5.10.0"
 junitPlatform = "1.10.0"
 junit4 = "4.13.2"
 kotlin = "1.9.20"
+mavenAssist = "0.0.0"
 foojay = "0.7.0"
 
 [libraries]
@@ -14,10 +15,12 @@ kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotl
 # Build-logic
 kotlin-gradlePlugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 kotlin-multiplatform-gradlePlugin = { module = "org.jetbrains.kotlin.multiplatform:org.jetbrains.kotlin.multiplatform.gradle.plugin", version.ref = "kotlin" }
+maven-assist-gradlePlugin = { module = "io.github.john-tuesday.maven-publish-assist:io.github.john-tuesday.maven-publish-assist.gradle.plugin", version.ref = "mavenAssist" }
 
 [plugins]
 dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
+maven-assist = { id = "io.github.john-tuesday.maven-publish-assist", version.ref = "mavenAssist" }
 foojay-resolver = { id = "https://github.com/John-Tuesday/physical-measurement-units.git", version.ref = "foojay" }
 
 [bundles]
