Update maven assist to 0.1.0-SNAPSHOT

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,7 @@ junit = "5.10.0"
 junitPlatform = "1.10.0"
 junit4 = "4.13.2"
 kotlin = "1.9.20"
-mavenAssist = "0.0.0"
+mavenAssist = "0.1.0-SNAPSHOT"
 foojay = "0.7.0"
 
 [libraries]
