--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 dokka = "1.9.10"
+dokkaConvention = "0.0.0-SNAPSHOT"
 junit = "5.10.0"
 junitPlatform = "1.10.0"
 junit4 = "4.13.2"
@@ -18,6 +19,7 @@ maven-assist-gradlePlugin = { module = "io.github.john-tuesday.maven-publish-ass
 
 [plugins]
 dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
+dokka-convention-html = { id = "io.github.john-tuesday.dokka-html", version.ref = "dokkaConvention" }
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 maven-assist = { id = "io.github.john-tuesday.maven-publish-assist", version.ref = "mavenAssist" }
 
