--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,7 +5,7 @@ junit = "5.10.0"
 junitPlatform = "1.10.0"
 junit4 = "4.13.2"
 kotlin = "1.9.20"
-mavenAssist = "0.1.0-SNAPSHOT"
+mavenAssist = "0.1.0-alpha01"
 
 [libraries]
 junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junit" }
