--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,10 @@
 [versions]
 dokka = "1.9.10"
-dokkaConvention = "0.1.0-alpha01"
+convention = "0.1.0-alpha04-SNAPSHOT"
 junit = "5.10.0"
 junitPlatform = "1.10.0"
 junit4 = "4.13.2"
 kotlin = "1.9.21"
-mavenAssist = "0.1.0-alpha01"
 
 [libraries]
 junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junit" }
@@ -15,13 +14,13 @@ kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotl
 # Build-logic
 kotlin-gradlePlugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 kotlin-multiplatform-gradlePlugin = { module = "org.jetbrains.kotlin.multiplatform:org.jetbrains.kotlin.multiplatform.gradle.plugin", version.ref = "kotlin" }
-maven-assist-gradlePlugin = { module = "io.github.john-tuesday.maven-publish-assist:io.github.john-tuesday.maven-publish-assist.gradle.plugin", version.ref = "mavenAssist" }
+maven-assist-gradlePlugin = { module = "io.github.john-tuesday.maven-publish-assist:io.github.john-tuesday.maven-publish-assist.gradle.plugin", version.ref = "convention" }
 
 [plugins]
 dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
-dokka-convention-html = { id = "io.github.john-tuesday.dokka-html", version.ref = "dokkaConvention" }
+dokka-convention-html = { id = "io.github.john-tuesday.dokka-html", version.ref = "convention" }
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
-maven-assist = { id = "io.github.john-tuesday.maven-publish-assist", version.ref = "mavenAssist" }
+maven-assist = { id = "io.github.john-tuesday.maven-publish-assist", version.ref = "convention" }
 
 [bundles]
 
