--- a/.github/workflows/publish-maven.yml
+++ b/.github/workflows/publish-maven.yml
@@ -43,7 +43,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Setup Java '8'
-        uses: actions/setup-java@3.13.0
+        uses: actions/setup-java@v3.13.0
         with:
           distribution: 'temurin'
           java-version: '8'
