--- a/.github/workflows/publish-maven.yml
+++ b/.github/workflows/publish-maven.yml
@@ -37,7 +37,7 @@ jobs:
       OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
       GPG_SIGNING_PASSWORD: ${{ secrets.GPG_SIGNING_PASSWORD }}
       GPG_SECRET_KEY: ${{ secrets.GPG_SECRET_KEY }}
-      IS_MAIN_HOST: ${{ matrix.os == 'ubuntu-latest' }}
+      IS_MAIN_HOST: ${{ matrix.os == 'ubuntu-latest' && 'true' || 'false' }}
 
     steps:
       - uses: actions/checkout@v4
