--- a/.github/workflows/publish-maven.yml
+++ b/.github/workflows/publish-maven.yml
@@ -50,9 +50,11 @@ jobs:
           cache: 'gradle'
 
       - name: Is main host
+        shell: bash
         run: echo "$IS_MAIN_HOST"
 
       - name: Publish to repos
+        shell: bash
         if: ${{ inputs.github-packages || inputs.sonatype }}
         env:
           TASK: ${{ (inputs.github-packages && inputs.sonatype) && 'publish' || (inputs.github-packages && 'publishAllPublicationsToGitHubPackagesRepository' || 'publishAllPublicationsToSonatypeStagingRepository') }}
