--- a/.github/workflows/release-version.yml
+++ b/.github/workflows/release-version.yml
@@ -15,6 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Create release
+        shell: bash
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: echo gh release create "$GITHUB_REF_NAME" --notes-from-tag
