--- a/.github/workflows/release-version.yml
+++ b/.github/workflows/release-version.yml
@@ -26,4 +26,6 @@ jobs:
       contents: read
 
     uses: ./.github/workflows/publish-maven.yml
+    with:
+      sonatype: false
     secrets: inherit
