Manually disable github-packages

--- a/.github/workflows/release-version.yml
+++ b/.github/workflows/release-version.yml
@@ -28,4 +28,5 @@ jobs:
     uses: ./.github/workflows/publish-maven.yml
     with:
       sonatype: false
+      github-packages: false
     secrets: inherit
