--- a/.github/workflows/release-version.yml
+++ b/.github/workflows/release-version.yml
@@ -2,9 +2,8 @@ name: Release version
 
 on:
   push:
-    branches: [ "d-actions" ]
-        #    tags:
-#      - v[0-9]*
+    tags:
+      - v[0-9]*
 
 jobs:
   release:
@@ -18,7 +17,7 @@ jobs:
         shell: bash
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: echo gh release create "$GITHUB_REF_NAME" --notes-from-tag
+        run: gh release create "$GITHUB_REF_NAME" --notes-from-tag
 
   publish:
     permissions:
