Only publish to Sonatype for easier clearing

--- a/.github/workflows/release-version.yml
+++ b/.github/workflows/release-version.yml
@@ -25,4 +25,6 @@ jobs:
       contents: read
 
     uses: ./.github/workflows/publish-maven.yml
+    with:
+      github-packages: false
     secrets: inherit
