--- a/.github/workflows/publish-maven.yml
+++ b/.github/workflows/publish-maven.yml
@@ -47,7 +47,9 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '8'
-          cache: 'gradle'
+
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2.10.0
 
       - name: Publish to repos
         shell: bash
