--- a/.github/workflows/publish-maven.yml
+++ b/.github/workflows/publish-maven.yml
@@ -48,6 +48,8 @@ jobs:
           distribution: 'temurin'
           java-version: '8'
 
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation@v1.1.0
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2.10.0
 
