--- a/.github/workflows/pre-release-version.yml
+++ b/.github/workflows/pre-release-version.yml
@@ -6,8 +6,17 @@ on:
       - v[0-9][0-9.]+-[a-zA-Z]+[0-9][0-9]?
 
 jobs:
+  publish:
+    permissions:
+      packages: write
+      contents: read
+
+    uses: ./.github/workflows/publish-maven.yml
+    secrets: inherit
+
   pre-release:
     runs-on: ubuntu-latest
+    needs: publish
 
     permissions:
       contents: write
