--- a/.github/workflows/release-version.yml
+++ b/.github/workflows/release-version.yml
@@ -6,8 +6,17 @@ on:
       - v[0-9][0-9.]+
 
 jobs:
+  publish:
+    permissions:
+      packages: write
+      contents: read
+
+    uses: ./.github/workflows/publish-maven.yml
+    secrets: inherit
+
   release:
     runs-on: ubuntu-latest
+    needs: publish
 
     permissions:
       contents: write
@@ -18,11 +27,3 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: gh release create "$GITHUB_REF_NAME" --notes-from-tag
-
-  publish:
-    permissions:
-      packages: write
-      contents: read
-
-    uses: ./.github/workflows/publish-maven.yml
-    secrets: inherit
