--- a/.github/workflows/publish-maven.yml
+++ b/.github/workflows/publish-maven.yml
@@ -58,5 +58,5 @@ jobs:
         if: ${{ inputs.github-packages || inputs.sonatype }}
         env:
           TASK: ${{ (inputs.github-packages && inputs.sonatype) && 'publish' || (inputs.github-packages && 'publishAllPublicationsToGitHubPackagesRepository' || 'publishAllPublicationsToSonatypeStagingRepository') }}
-        run: ./gradlew "$TASK"
+        run: ./gradlew "$TASK" --continue
 
