--- a/.github/workflows/publish-maven.yml
+++ b/.github/workflows/publish-maven.yml
@@ -56,6 +56,7 @@ jobs:
       - name: Publish to repos
         shell: bash
         if: ${{ inputs.github-packages || inputs.sonatype }}
+        continue-on-error: true
         env:
           TASK: ${{ (inputs.github-packages && inputs.sonatype) && 'publish' || (inputs.github-packages && 'publishAllPublicationsToGitHubPackagesRepository' || 'publishAllPublicationsToSonatypeStagingRepository') }}
         run: ./gradlew "$TASK" --continue
