--- a/.github/workflows/publish-maven.yml
+++ b/.github/workflows/publish-maven.yml
@@ -64,4 +64,6 @@ jobs:
       - name: Push documentation
         shell: bash
         run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
           git commit -a -m "Generated documentation"; git push
