--- a/.github/workflows/publish-maven.yml
+++ b/.github/workflows/publish-maven.yml
@@ -62,8 +62,10 @@ jobs:
         run: ./gradlew "$TASK" --continue
 
       - name: Push documentation
+        if: ${{ matrix.os == 'ubuntu-latest' }}
         shell: bash
         run: |
+          ./gradlew dokkaHtmlMultiModule
           git config user.name github-actions
           git config user.email github-actions@github.com
           git commit -a -m "Generated documentation"; git push
