--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,4 @@ org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemor
 kotlin.code.style=official
 kotlin.js.compiler=ir
 kotlin.native.ignoreDisabledTargets=true
+org.gradle.kotlin.dsl.skipMetadataVersionCheck=false
