--- a/.github/workflows/publish-maven.yml
+++ b/.github/workflows/publish-maven.yml
@@ -40,7 +40,7 @@ jobs:
       OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
       GPG_SIGNING_PASSWORD: ${{ secrets.GPG_SIGNING_PASSWORD }}
       GPG_SECRET_KEY: ${{ secrets.GPG_SECRET_KEY }}
-      IS_MAIN_HOST: ${{ matrix.os == 'ubuntu-latest' && 'true' || 'false' }}
+      TARGET_FILTER_INCLUDE: ${{ matrix.os == 'macos-latest' && '(macos*)|(ios*)|(watchos*)|(tvos*)' || '*' }}
 
     steps:
       - uses: actions/checkout@v4
